--- a/tools/shorter/index.html
+++ b/tools/shorter/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+<p align="center"><img src="images/logo.png" alt="Shorter!" /></p>
 <h2>What Are You Doing?</h2>
 <div id="formbox">
 	<div id="statusBar">
@@ -34,7 +35,7 @@
 	</div>
 </div>
 <div id="copyright">
-	<p>Powered by <a href="http://leeiio.me/">Shorter</a> v0.1.<a href="http://leeiio.me/">Leeiio</a> Chaos Made.</p>
+	<p>Powered by <a href="http://leeiio.me/shorter/">Shorter</a> v0.1.<a href="http://leeiio.me/">Leeiio</a> Chaos Made.</p>
 	<p>Find a BUG? <a href="https://twitter.com/leeiio/">Contact me @leeiio</a> !<img src="http://img.tongji.linezing.com/1347541/tongji.gif" alt="linezing" /></p>
 	<p>Donate me and it can make me happy and give the best service.</p>
 	<div>
